--- a/CareDirection/CareDirection/Resources/Storyboard/FunctionDetail.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/FunctionDetail.storyboard
@@ -202,6 +202,24 @@
                                                         <color key="textColor" red="0.0" green="0.64705882349999999" blue="0.6588235294" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
+                                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PQX-AP-5SN">
+                                                        <rect key="frame" x="18" y="52" width="338" height="184"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="아직 케어받는 기능이 없어요!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oe6-LJ-mgK">
+                                                                <rect key="frame" x="72" y="123" width="195" height="21"/>
+                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="17"/>
+                                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icSelected" translatesAutoresizingMaskIntoConstraints="NO" id="eRE-NM-E81">
+                                                                <rect key="frame" x="144" y="40" width="50" height="50"/>
+                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            </imageView>
+                                                        </subviews>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    </view>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
@@ -728,6 +746,7 @@
                         <outlet property="functionalLabel" destination="nbD-tu-fMo" id="eU9-sn-81V"/>
                         <outlet property="functionalLabel2" destination="GEX-y2-ojx" id="ZOf-Kq-7ic"/>
                         <outlet property="navigationBar" destination="Sbn-yK-z44" id="5Ah-c8-MFS"/>
+                        <outlet property="noCareView" destination="PQX-AP-5SN" id="oMa-c0-JDU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v1j-Gu-CH4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -743,6 +762,7 @@
         <image name="fatigueRecovery60" width="60" height="60"/>
         <image name="health60" width="60" height="60"/>
         <image name="icBack" width="28" height="28"/>
+        <image name="icSelected" width="20" height="20"/>
         <image name="improvement60" width="60" height="60"/>
         <image name="levelOfImmunity60" width="60" height="60"/>
         <image name="liver60" width="60" height="60"/>
